Edited "about" text and fixed line spacing

--- a/leahwebfinal/finalstyle.css
+++ b/leahwebfinal/finalstyle.css
@@ -88,7 +88,7 @@ text-decoration:none; text-indent:10px; }
 
 a:hover {font-style: oblique; color: white}
 
-p {font-family: Georgia; font-size:1em; padding: 15px; color:black;}
+p {font-family: Georgia; font-size:1em; padding: 15px; color:black; line-height: 130%}
 
 h4 {font-family: Georgia; font-size:0.9em; padding: 15px; color:black; font-style:italic}
 
